Added playgroud & progressed in BroCode JS till 65

--- a/JavaScript Notes/BroCode JavaScript/65. Hide-Show HTML Element.md
+++ b/JavaScript Notes/BroCode JavaScript/65. Hide-Show HTML Element.md
@@ -1,3 +1,4 @@
+```js
 const mustang = document.getElementById("mustang");
 const btn = document.getElementById("myButton");
 
@@ -11,4 +12,9 @@ btn.addEventListener("click", event => {
         mustang.style.visibility = "visible";
         btn.textContent = "Hide";
     }
-});
+})
+```
+
+element.style.visibility = hidden
+this is hides the element from view, but preserve its space, so other elements don't shift.
+
