Played using classList in Playgroud

--- a/JavaScript Notes/BroCode JavaScript/60. Element selectors.md
+++ b/JavaScript Notes/BroCode JavaScript/60. Element selectors.md
@@ -52,7 +52,7 @@ selects the first match of the specified element tag/id (use #) /classname
 
 document.querySelectorAll("li");
 
-this gives a NodeList (similar like HTML collections but has its own forEach method. You don't have to do the typeconversion using Array.from())
+this gives a [[66. NodeList]] (similar like HTML collections but has its own forEach method. You don't have to do the typeconversion using Array.from())
 
 ```js
 const foods = document.querySelectorAll("li");
